talos/manifests/dashboard-ingress.yaml
    
# manifests/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web # On commence par HTTP, c'est plus simple
  routes:
    - match: Host(`dashboard.truxonline.com`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
          scheme: https # TRÈS IMPORTANT: On dit à Traefik de parler en HTTPS au dashboard
